Closed
Bug 84822
Opened 24 years ago
Closed 24 years ago
Boehm does not compile on Solaris 8 due to error in os_dep.c
Categories
(Core :: General, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: maarten, Assigned: beard)
References
Details
Attachments
(1 file)
693 bytes,
text/plain
|
Details |
In gc/boehm/gc_priv.h the callinfo struct is only defined as having
the ci_arg member if NARGS > 0:
253 # if NARGS > 0
254 word ci_arg[NARGS]; /* bit-wise complement to avoid retention
*/
255 # endif
However, in gc/boehm/os_dep.c the ci_arg member is not enclosed in #ifdef
statements, which on my platform (where NARGS==0), means that the structure
member ci_arg is accessed though it is not a member of the structure, yielding a
comilation error:
2274 for (i = 0; i < NARGS; i++) {
2275 info[nframes].ci_arg[i] = ~(fp->fr_arg[i]);
2276 }
The "fixed" code reads:
# if NARGS > 0
for (i = 0; i < NARGS; i++) {
info[nframes].ci_arg[i] = ~(fp->fr_arg[i]);
}
# endif
Newer versions at http://reality.sgi.com/boehm/gc.html don't have the
fix. I couldn't find any information about this package on the Mozilla
website. I couldn't find a contact for submitting
patches at Boehm's site.
Here's a diff of os_dep.c against the current CVS version of 0.9.1:
------------------------------------------------------------------------
2273a2274
> # if NARGS > 0
2276a2278
> # endif
------------------------------------------------------------------------
![]() |
Reporter | |
Comment 1•24 years ago
|
||
r=timeless
brendan: do you want to sr?
![]() |
||
Comment 3•24 years ago
|
||
patrick, could you look at this? there's a patch inline, above.
Assignee: waterson → beard
![]() |
Assignee | |
Comment 4•24 years ago
|
||
r=beard
Patches should typically be mailed to Hans_Boehm@hp.com or boehm@acm.org.
![]() |
Reporter | |
Comment 5•24 years ago
|
||
Bug reparted with Hans Boehm, he will incorporate the fix in the next version
![]() |
||
Comment 6•24 years ago
|
||
sr=waterson
a=dbaron for trunk checkin (on behalf of drivers)
fix checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•