Bugzilla Bug 84822 Boehm does not compile on Solaris 8 due to error in os_dep.c patch by maarten@belgonet.be r=beard sr=waterson a=dbaron